--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ validators = "^0.18.2"
 discord = "^1.7.3"
 Flask = "^2.0.2"
 python-dotenv = "^0.19.2"
-Quickstart = "^0.4"
+#Quickstart = "^0.4"
 replit = "^3.2.4"
 DiscordUtils = "^1.3.4"
 jsonpickle = "^2.1.0"
